# gou

./: CMakeLists.txt
include/: dataio.h  linerSolver.h  parameterCal.h
other_code/: a.out  angle_v.cpp  eigensolve.cpp  readTest.cpp  time_test.c  time_transfer.c
src/: dataio.cpp  linerSolver.cpp  main.cpp  parameterCal.cpp
